base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: droplet
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: droplet
    app.kubernetes.io/component: cache
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
